--- a/taskbar/base.css
+++ b/taskbar/base.css
@@ -1,32 +1,87 @@
-@import url('https://fonts.google.com/specimen/Source+Code+Pro');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
+/* palette */
+/* https://coolors.co/palette/151633-2a2c66-3f4299-696eff-f8acff-f0f1ff */
+
+
 
 body
 {
-        background-color: #EC94BF; 
-        align-items: center;      
+    background-color: #2A2C66; 
+    font-family: 'Source Code Pro';
+    margin: 0;
+    padding: 0;  
+    
 }
 
-nav ul {
-    font-family: "Source Code Pro";
-    color: #F0F1FF;
-    padding: 0;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-    display: block;
-    list-style: none;
-    text-align: center;
- }
- 
-nav ul li 
+div nav
 {
-    
-    display: inline-block;
-    color: #F0F1FF;
- }
+    margin: center;
+    align-content: center;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+}
 
-li
+ul 
 {
-    display: inline;
-    align-items: center;
+    list-style-type: none;
+    display: block;
+    background-color: #696EFF;
+}
+  
+li 
+{
+    float: left;
+    display: block;
+}
+  
+li a 
+{
+    font-family: 'Source Code Pro';
+    display: flex;
+    color: #F0F1FF;
+    align-content: left;
+    text-align: center;
+    padding: 0;
+    text-decoration: none;
+    font-size: 40pt;   
+}
+
+li b
+{
+    font-family: 'Source Code Pro';
+    display: flex;
+    color: #F0F1FF;
+    align-content: center;
+    text-align: center;
+    padding: 0;
+    text-decoration: none;
+    font-size: 40pt;   
+}
+
+li c
+{
+    font-family: 'Source Code Pro';
+    display: flex;
+    color: #F0F1FF;
+    align-content: left;
+    text-align: right;
+    padding: 0;
+    text-decoration: none;
+    font-size: 40pt;   
+}
+
+  
+li a:hover 
+{
+    color: #696EFF;
+}
+
+li b:hover 
+{
+    color: #696EFF;
+}
+
+li c:hover 
+{
+    color: #696EFF;
 }
